[project]
name = "chainlit-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedArbaz", email = "154218937+AhmedArbaz@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.16",
]

[project.scripts]
chainlit-hello = "chainlit_hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
